# agentic-insurance-bot

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  agent.py  aistudio_live_test.py  bidi_local.py  deploy.sh  pyproject.toml  requirements.txt  workflow.py
agents/: claims_agent.py  emergency_agent.py  offers_agent.py  policy_agent.py
core/: audit_logger.py  config.py  gcs_client.py
data/: mock_data_generator.py
docs/: 01-adk-concepts.md  02-architecture.md  03-design-decisions.md  04-data-and-guardrails.md  05-running-and-ops.md  06-guardrails.md  ARCHITECTURE_DIAGRAM.md  DEMO_RUNBOOK.md  DEPLOY.md  PRESENTATION.md  README.md  architecture.drawio
evaluation/: metrics.py  runner.py  test_scenarios.py
insurance_bot/: __init__.py  agent.py  eval_set_1.evalset.json  live_agent.py  workflow.py
insurance_bot/agents/: claims_agent.py  classifier_agent.py  emergency_agent.py  identifier_agent.py  offers_agent.py  policy_agent.py
insurance_bot/core/: config.py  conversation.py  gcs_client.py  guardrail_plugin.py  guardrails.py  llm.py  models.py  outcomes.py  output_guard.py  safety.py
insurance_bot/data/: offer_catalog.py
insurance_bot/tools/: claim_tools.py  offer_tools.py  policy_tools.py
scripts/: diagnose_lookup.py  generate_offers.py  sos_bucket_smoketest.py
src/voice_live/: __init__.py  __main__.py  aec.py  aec_probe.py  aec_verify.py  agent.py  audio.py  config.py  event_dump.py  logging_setup.py  session.py
tests/: test_claim.py  test_conversation.py  test_offer.py  test_outcomes.py  test_policy.py  test_sos.py
